--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -11,7 +11,7 @@ exec-once = wl-paste --type text --watch cliphist store #Stores only text data
 exec-once = wl-paste --type image --watch cliphist store #Stores only image data
 exec-once = hypridle
 exec-once=[workspace 1 silent] kitty
-exec-once=[workspace 2 silent] google-chrome-stable
+exec-once=[workspace 2 silent] brave
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
@@ -86,7 +86,7 @@ dwindle {
 
 master {
     # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
-    new_is_master = false
+    #new_is_master = false
 }
 
 gestures {
