--- a/.gitconfig
+++ b/.gitconfig
@@ -28,10 +28,10 @@
 	defaultBranch = main
 [credential "https://github.com"]
 	helper = 
-	helper = !/opt/homebrew/bin/gh auth git-credential
+	helper = !/run/current-system/sw/bin/gh auth git-credential
 [credential "https://gist.github.com"]
 	helper = 
-	helper = !/opt/homebrew/bin/gh auth git-credential
+	helper = !/run/current-system/sw/bin/gh auth git-credential
 [pull]
 	rebase = false
 	ff = true
